Use Noto Mono and fix alignment of transliterations, also give background to console

--- a/Aegean.css
+++ b/Aegean.css
@@ -16,3 +16,9 @@
   font-weight: 400;
   src: url(NotoEmojiRegular.ttf) format('truetype');
 }
+@font-face {
+  font-family: 'Noto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url(NotoMono-Regular.ttf) format('truetype');
+}
